apps/pulse/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: pulse
  name: pulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pulse
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pulse
        app.kubernetes.io/name: pulse
    spec:
      containers:
        - name: pulse
          image: bsvb/pulse:v0.5.1
          args:
            - --preloaded
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
